# mFAST

./: .dropbox  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakePresets.json  ReadMe.md  appveyor.yml  emscripten_build.sh  fast.schema  index.html  index.md  invoke.bat.in  licence.txt  mFASTConfig.cmake.in  mFASTConfigVersion.cmake.in  mfast.mwc  mwc.sh  params.json  travis-install-emscripten.sh  uncrustify.cfg  vcpkg.json
examples/emdi/: CMakeLists.txt  emdi_snapshot.xml  fixed_template_test.cpp  outfile.fast  scp.xml
examples/hello_world/: CMakeLists.txt  hello_world.cpp
examples/message_printer/: CMakeLists.txt  MDRefreshSample.xml  message_printer.cpp  message_printer.h
examples/performance_test/: CMakeLists.txt  ReadMe.txt  example.xml  fixed_template_test.cpp  fixed_template_test_v2.cpp  generic_template_test.cpp
src/: CMakeLists.txt  mfast.h
src/fast_type_gen/: CMakeLists.txt  FastCodeGenBase.h  FastXML2Header.cpp  FastXML2Header.h  FastXML2Inline.cpp  FastXML2Inline.h  FastXML2Source.cpp  FastXML2Source.h  codegen_base.cpp  codegen_base.h  cpp_gen.cpp  cpp_gen.h  fast_type_gen.cpp  fast_type_gen.mpc  hpp_gen.cpp  hpp_gen.h  indented_ostream.h  inl_gen.cpp  inl_gen.h
src/fastxml/: CMakeLists.txt  FastXMLVisitor.cpp  FastXMLVisitor.h
src/mfast/: CMakeLists.txt  aggregate_ref.h  allocator.cpp  allocator.h  allocator_utils.h  arena_allocator.cpp  arena_allocator.h  array_view.h  boolean_ref.cpp  boolean_ref.h  check_overflow.h  codec_helper.h  composite_field.h  composite_type.h  debug_stream.h  decimal_ref.cpp  decimal_ref.h  decoder.cpp  decoder.h  decoder_field_operator.cpp  decoder_field_operator.h  decoder_presence_map.h  dictionary_builder.cpp  dictionary_builder.h  dynamic_message_ref.h  dynamic_ref.h  dynamic_templates_description.cpp  dynamic_templates_description.h  encoder.cpp  encoder.h  enum_ref.h  exceptions.cpp  exceptions.h  ext_ref.h  fast_decoder.h  fast_encoder.h  fast_istream.cpp  fast_istream.h  fast_istream_extractor.h  fast_istreambuf.h  (+33 more)
src/mfast/coder/: CMakeLists.txt  dynamic_templates_description.cpp  dynamic_templates_description.h  fast_decoder.h  fast_decoder_v2.h  fast_encoder.h  fast_encoder_v2.h  mfast_coder.mpc  mfast_coder_export.h
src/mfast/coder/common/: FastXMLVisitor.cpp  FastXMLVisitor.h  codec_helper.h  debug_stream.h  dictionary_builder.cpp  dictionary_builder.h  exceptions.cpp  exceptions.h  template_repo.h
src/mfast/coder/decoder/: check_overflow.h  decoder_field_operator.cpp  decoder_field_operator.h  decoder_presence_map.cpp  decoder_presence_map.h  fast_decoder.cpp  fast_istream.cpp  fast_istream.h  fast_istream_extractor.h  fast_istreambuf.h
src/mfast/coder/decoder_v2/: decoder_function.h  fast_decoder_core.cpp  fast_decoder_core.h  fast_istream_extractor.h
src/mfast/coder/encoder/: encoder_field_operator.cpp  encoder_field_operator.h  encoder_presence_map.h  fast_encoder.cpp  fast_ostream.h  (+4 more)
src/mfast/decoder/: check_overflow.h  decoder_field_operator.cpp  decoder_field_operator.h  decoder_presence_map.cpp  decoder_presence_map.h  fast_istream.cpp  fast_istream.h  fast_istream_extractor.h
src/mfast/encoder/: encoder_field_operator.cpp  encoder_field_operator.h  encoder_presence_map.h  fast_ostream.h  fast_ostream_inserter.h  fast_ostreambuf.cpp  fast_ostreambuf.h  resizable_fast_ostreambuf.h
src/mfast/fast_coder/: codec_helper.h  debug_stream.h  dictionary_builder.cpp  dictionary_builder.h  exceptions.cpp  exceptions.h
src/mfast/instructions/: byte_vector_instruction.cpp  byte_vector_instruction.h  decimal_instruction.cpp  decimal_instruction.h  enum_instruction.cpp  enum_instruction.h  field_instruction.cpp  field_instruction.h  group_instruction.cpp  group_instruction.h  int_instructions.cpp  int_instructions.h  int_vector_instructions.h  sequence_instruction.cpp  sequence_instruction.h  set_instruction.cpp  set_instruction.h  string_instructions.cpp  string_instructions.h  template_instruction.cpp  template_instruction.h  templateref_instruction.cpp  templateref_instruction.h  templates_description.h  vector_instruction_base.cpp  vector_instruction_base.h
src/mfast/json/: CMakeLists.txt  json.h  json_decode.cpp  json_decoder.h  json_encode.cpp  json_encoder.h  mfast_json.mpc  mfast_json_export.h
src/mfast/sqlite3/: CMakeLists.txt  aggregate_inserter.cpp  aggregate_inserter.h  converter.cpp  converter.h  converter_core.cpp  converter_core.h  error.cpp  error.h  field_instruction_visitor_ex.cpp  field_instruction_visitor_ex.h  field_masks.h  first_pass_visitor.cpp  first_pass_visitor.h  mfast_sqlite3_export.h  second_pass_visitor.cpp  second_pass_visitor.h  sequence_inserter.h  tables_creator.cpp  tables_creator.h  third_pass_visitor.cpp  third_pass_visitor.h  value_binder.h
src/mfast/xml_parser/: CMakeLists.txt  FastXMLVisitor.cpp  FastXMLVisitor.h  dynamic_templates_description.h  fast_xml_attributes.h  field_builder.cpp  field_builder.h  field_builder_base.h  field_op.cpp  field_op.h  mfast_xml_parser.mpc  mfast_xml_parser_export.h  template_registry_impl.h  templates_builder.cpp  templates_builder.h  view_info_builder.cpp  view_info_builder.h  xml_util.h
tests/: CMakeLists.txt  aggregate_view_test.cpp  arena_allocator_test.cpp  byte_stream.h  coder_test.cpp  composite_type_test.cpp  debug_allocator.h  decoder_operator_test.cpp  decoder_test.cpp  dictionary_builder_test.cpp  encoder_decoder_pmap.cpp  encoder_decoder_pmap_v2.cpp  encoder_decoder_test.cpp  encoder_decoder_test_v2.cpp  encoder_operator_test.cpp  encoder_test.cpp  enum_encoder_decoder.cpp  enum_encoder_decoder_v2.cpp  fast_istream_test.cpp  fast_ostream_test.cpp  fast_test_coding_case.hpp  fast_test_coding_case_v2.hpp  fast_type_gen_test.cpp  field_comparator_test.cpp  field_ref_test.cpp  group_encoder_decoder.cpp  group_encoder_decoder_v2.cpp  int_vector_test.cpp  json_test.cpp  message_pmap_test.cpp  mfast_test.mpc  non_utf_tests.cpp  scp_reset_test.cpp  sequence_encoder_decoder.cpp  sequence_encoder_decoder_v2.cpp  set_basic_test.cpp  set_encoder_decoder.cpp  set_encoder_decoder_v2.cpp  simple1.xml  simple10.xml  (+30 more)
(+66 files in other folders)
